service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
spec:
  ports:
  - name: "http"
    port: 80
    protocol: TCP
  selector:
    app: mealie
  type: ClusterIP
